syntax = "proto3";

option go_package = "grpc/v1";

package v1;

service Service {
    rpc Start(ServiceRequest) returns (StatusResponse) {};
    rpc Stop(ServiceRequest) returns (StatusResponse) {};
}

service Docker {
    rpc Start(DockerRequest) returns (StatusResponse) {};
    rpc Stop(DockerRequest) returns (StatusResponse) {};
}

service CPU {
    rpc Start(CPURequest) returns (StatusResponse) {};
    rpc Stop(CPURequest) returns (StatusResponse) {};
}

service Server {
    rpc Stop(ServerRequest) returns (StatusResponse) {};
}

message ServiceRequest {
    string jobName = 1;
    string name = 2;
}

message DockerRequest {
    string jobName = 1;
    string name = 2;
}

message CPURequest {
    int32 percentage = 1;
}

message ServerRequest {}

message StatusResponse {
    enum Status{
        SUCCESS = 0;
        FAIL = 1;
    }
    Status status = 1;
    string message = 2;
}